--- a/Los_Angeles_Music_Composer.ipynb
+++ b/Los_Angeles_Music_Composer.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Los Angeles Music Composer (ver. 2.1)\n",
+        "# Los Angeles Music Composer (ver. 2.2)\n",
         "\n",
         "***\n",
         "\n",
@@ -238,7 +238,256 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# (LOAD SEED MIDI)"
+        "# (GENERATE)"
+      ],
+      "metadata": {
+        "id": "7xNyANjZsCOi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title Improv Generator\n",
+        "\n",
+        "#@markdown Select desired instruments (any combination is fine)\n",
+        "\n",
+        "Piano = True #@param {type:\"boolean\"}\n",
+        "Guitar = True #@param {type:\"boolean\"}\n",
+        "Bass = True #@param {type:\"boolean\"}\n",
+        "Violin = False #@param {type:\"boolean\"}\n",
+        "Cello = False #@param {type:\"boolean\"}\n",
+        "Harp = False #@param {type:\"boolean\"}\n",
+        "Trumpet = False #@param {type:\"boolean\"}\n",
+        "Clarinet = False #@param {type:\"boolean\"}\n",
+        "Flute = False #@param {type:\"boolean\"}\n",
+        "Drums = True #@param {type:\"boolean\"}\n",
+        "Choir = True #@param {type:\"boolean\"}\n",
+        "Organ = False #@param {type:\"boolean\"}\n",
+        "\n",
+        "#@markdown Improv Timings and Velocity\n",
+        "desired_prime_time = 10 #@param {type:\"slider\", min:0, max:127, step:1}\n",
+        "desired_prime_duration = 20 #@param {type:\"slider\", min:1, max:126, step:1}\n",
+        "desired_velocity = 6 #@param {type:\"slider\", min:1, max:8, step:1}\n",
+        "\n",
+        "#@markdown Model settings\n",
+        "\n",
+        "number_of_tokens_tp_generate = 512 #@param {type:\"slider\", min:32, max:4064, step:32}\n",
+        "number_of_batches_to_generate = 4 #@param {type:\"slider\", min:1, max:16, step:1}\n",
+        "temperature = 0.9 #@param {type:\"slider\", min:0.1, max:1, step:0.1}\n",
+        "\n",
+        "instruments = []\n",
+        "\n",
+        "if Piano:\n",
+        "  instruments += [\n",
+        "                  0, # delta start time (0)\n",
+        "                  ((desired_prime_duration * 8) + (desired_velocity-1))+128,\n",
+        "                  ((0 * 128) + 60)+1152, # instrument number(1) + start pitch(60)\n",
+        "                 ]\n",
+        "\n",
+        "if Guitar:\n",
+        "  instruments += [0, # delta start time (0)\n",
+        "                  ((desired_prime_duration * 8) + (desired_velocity-1))+128,\n",
+        "                  ((1 * 128) + 60)+1152, # instrument number(1) + start pitch(60)\n",
+        "                  ]\n",
+        "\n",
+        "if Bass:\n",
+        "  instruments += [0, # delta start time (0)\n",
+        "                  ((desired_prime_duration * 8) + (desired_velocity-1))+128,\n",
+        "                  ((2 * 128) + 48)+1152, # instrument number(2) + start pitch(48)\n",
+        "                  ]\n",
+        "if Violin:\n",
+        "  instruments += [0, # delta start time (0)\n",
+        "                  ((desired_prime_duration * 8) + (desired_velocity-1))+128,\n",
+        "                  ((3 * 128) + 72)+1152, # instrument number(3) + start pitch(72)\n",
+        "                  ]\n",
+        "\n",
+        "if Cello:\n",
+        "  instruments += [0, # delta start time (0)\n",
+        "                  ((desired_prime_duration * 8) + (desired_velocity-1))+128,\n",
+        "                  ((4 * 128) + 48)+1152, # instrument number(4) + start pitch(48)\n",
+        "                  ]\n",
+        "\n",
+        "if Harp:\n",
+        "  instruments += [0, # delta start time (0)\n",
+        "                  ((desired_prime_duration * 8) + (desired_velocity-1))+128,\n",
+        "                  ((5 * 128) + 72)+1152, # instrument number(5) + start pitch(72)\n",
+        "                  ]\n",
+        "\n",
+        "if Trumpet:\n",
+        "  instruments += [0, # delta start time (0)\n",
+        "                  ((desired_prime_duration * 8) + (desired_velocity-1))+128,\n",
+        "                  ((6 * 128) + 72)+1152, # instrument number(6) + start pitch(72)\n",
+        "                  ]\n",
+        "\n",
+        "if Clarinet:\n",
+        "  instruments += [0, # delta start time (0)\n",
+        "                  ((desired_prime_duration * 8) + (desired_velocity-1))+128,\n",
+        "                  ((7 * 128) + 72)+1152, # instrument number(7) + start pitch(72)\n",
+        "                  ]\n",
+        "\n",
+        "if Flute:\n",
+        "  instruments += [0, # delta start time (0)\n",
+        "                  ((desired_prime_duration * 8) + (desired_velocity-1))+128,\n",
+        "                  ((8 * 128) + 72)+1152, # instrument number(8) + start pitch(72)\n",
+        "                  ]\n",
+        "\n",
+        "if Drums:\n",
+        "  instruments += [0, # delta start time (0)\n",
+        "                  ((desired_prime_duration * 8) + (desired_velocity-1))+128,\n",
+        "                  ((9 * 128) + 35)+1152, # instrument number(9) + start pitch(35)\n",
+        "                  ]\n",
+        "\n",
+        "if Choir:\n",
+        "  instruments += [0, # delta start time (0)\n",
+        "                  ((desired_prime_duration * 8) + (desired_velocity-1))+128,\n",
+        "                  ((10 * 128) + 72)+1152, # instrument number(10) + start pitch(72)\n",
+        "                  ]\n",
+        "\n",
+        "if Organ:\n",
+        "  instruments += [0, # delta start time (0)\n",
+        "                  ((desired_prime_duration * 8) + (desired_velocity-1))+128,\n",
+        "                  ((11 * 128) + 60)+1152, # instrument number(11) + start pitch(60)\n",
+        "                  ]\n",
+        "\n",
+        "instruments[0] = desired_prime_time\n",
+        "instruments[3::3] = [0] * len(instruments[3::3])\n",
+        "\n",
+        "outy = instruments\n",
+        "\n",
+        "#===================================================================\n",
+        "\n",
+        "print('=' * 70)\n",
+        "print('Los Angeles Music Composer Model Improvisation Generator')\n",
+        "print('=' * 70)\n",
+        "\n",
+        "print('Generation settings:')\n",
+        "print('=' * 70)\n",
+        "print('Model temperature:', temperature)\n",
+        "\n",
+        "print('=' * 70)\n",
+        "print('Selected Improv sequence:')\n",
+        "print(outy)\n",
+        "print('=' * 70)\n",
+        "\n",
+        "inp = [outy] * number_of_batches_to_generate\n",
+        "\n",
+        "inp = torch.LongTensor(inp).cuda()\n",
+        "\n",
+        "#start_time = time()\n",
+        "\n",
+        "out = model.module.generate(inp, \n",
+        "                      number_of_tokens_tp_generate, \n",
+        "                      temperature=temperature, \n",
+        "                      return_prime=True, \n",
+        "                      min_stop_token=0, \n",
+        "                      verbose=True)\n",
+        "\n",
+        "out0 = out.tolist()\n",
+        "\n",
+        "print('=' * 70)\n",
+        "print('Done!')\n",
+        "print('=' * 70)\n",
+        "#print('Generation took', time() - start_time, \"seconds\")\n",
+        "print('=' * 70)\n",
+        "\n",
+        "#======================================================================\n",
+        "\n",
+        "print('Rendering results...')\n",
+        "print('=' * 70)\n",
+        "\n",
+        "for i in range(number_of_batches_to_generate):\n",
+        "\n",
+        "  print('=' * 70)\n",
+        "  print('Batch #', i)\n",
+        "  print('=' * 70)\n",
+        "\n",
+        "  out1 = out0[i]\n",
+        "\n",
+        "  print('Sample INTs', out1[:12])\n",
+        "  print('=' * 70)\n",
+        "\n",
+        "  if len(out) != 0:\n",
+        "    \n",
+        "      song = out1\n",
+        "      song_f = []\n",
+        "      tim = 0\n",
+        "      dur = 0\n",
+        "      vel = 0\n",
+        "      pitch = 0\n",
+        "      channel = 0\n",
+        "\n",
+        "      son = []\n",
+        "      song1 = []\n",
+        "\n",
+        "      for s in song:\n",
+        "        if s >= 128 and s < (12*128)+1152:\n",
+        "          son.append(s)\n",
+        "        else:\n",
+        "          if len(son) == 3:\n",
+        "            song1.append(son)\n",
+        "          son = []\n",
+        "          son.append(s)\n",
+        "                      \n",
+        "      for ss in song1:\n",
+        "\n",
+        "        tim += ss[0] * 10\n",
+        "\n",
+        "        dur = (((ss[1]-128) // 8)+1) * 20\n",
+        "        vel = (((ss[1]-128) % 8)+1) * 15\n",
+        "    \n",
+        "        channel = (ss[2]-1152) // 128\n",
+        "        pitch = (ss[2]-1152) % 128\n",
+        "                        \n",
+        "        song_f.append(['note', tim, dur, channel, pitch, vel ])\n",
+        "\n",
+        "      detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
+        "                                                          output_signature = 'Los Angeles Music Composer',  \n",
+        "                                                          output_file_name = '/content/Los-Angeles-Music-Composer-Music-Composition_'+str(i), \n",
+        "                                                          track_name='Project Los Angeles',\n",
+        "                                                          list_of_MIDI_patches=[0, 24, 32, 40, 42, 46, 56, 71, 73, 0, 53, 19, 0, 0, 0, 0],\n",
+        "                                                          number_of_ticks_per_quarter=500)\n",
+        "\n",
+        "\n",
+        "      print('=' * 70)\n",
+        "      print('Displaying resulting composition...')\n",
+        "      print('=' * 70)\n",
+        "\n",
+        "      fname = '/content/Los-Angeles-Music-Composer-Music-Composition_'+str(i)\n",
+        "\n",
+        "      x = []\n",
+        "      y =[]\n",
+        "      c = []\n",
+        "\n",
+        "      colors = ['red', 'yellow', 'green', 'cyan', 'blue', 'pink', 'orange', 'purple', 'gray', 'white', 'gold', 'silver']\n",
+        "\n",
+        "      for s in song_f:\n",
+        "        x.append(s[1] / 1000)\n",
+        "        y.append(s[4])\n",
+        "        c.append(colors[s[3]])\n",
+        "\n",
+        "      FluidSynth(\"/usr/share/sounds/sf2/FluidR3_GM.sf2\", 16000).midi_to_audio(str(fname + '.mid'), str(fname + '.wav'))\n",
+        "      display(Audio(str(fname + '.wav'), rate=16000))\n",
+        "\n",
+        "      plt.figure(figsize=(14,5))\n",
+        "      ax=plt.axes(title=fname)\n",
+        "      ax.set_facecolor('black')\n",
+        "\n",
+        "      plt.scatter(x,y, c=c)\n",
+        "      plt.xlabel(\"Time\")\n",
+        "      plt.ylabel(\"Pitch\")\n",
+        "      plt.show() "
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "4ZPGiOEIUlpV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# (CUSTOM MIDI)"
       ],
       "metadata": {
         "id": "Gt03VtO6uKkb"
@@ -496,15 +745,6 @@
         "plt.ylabel(\"Pitch\")\n",
         "plt.show()"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# (GENERATE)"
-      ],
-      "metadata": {
-        "id": "7xNyANjZsCOi"
-      }
     },
     {
       "cell_type": "code",
@@ -1162,7 +1402,7 @@
       "private_outputs": true,
       "provenance": []
     },
-    "gpuClass": "standard",
+    "gpuClass": "premium",
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
