--- a/Los_Angeles_Music_Composer_TTM_Edition.ipynb
+++ b/Los_Angeles_Music_Composer_TTM_Edition.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Los Angeles Music Composer TTM Edition (ver. 1.0)\n",
+        "# Los Angeles Music Composer TTM Edition (ver. 1.1)\n",
         "\n",
         "***\n",
         "\n",
@@ -312,11 +312,19 @@
       "source": [
         "#@title Standard/Simple Continuation\n",
         "\n",
-        "enter_desired_song_title = \"Can You Feel The Love Tonight\" #@param {type:\"string\"}\n",
-        "number_of_tokens_to_generate = 512 #@param {type:\"slider\", min:32, max:4096, step:32}\n",
+        "#@markdown Text-To-Music Settings\n",
+        "\n",
+        "#@markdown NOTE: You can enter any desired title or artist, or both\n",
+        "\n",
+        "enter_desired_song_title = \"Family Guy\" #@param {type:\"string\"}\n",
+        "enter_desired_artist = \"TV Themes\" #@param {type:\"string\"}\n",
+        "\n",
+        "#@markdown Generation Settings\n",
+        "\n",
+        "number_of_tokens_to_generate = 512 #@param {type:\"slider\", min:32, max:2048, step:32}\n",
         "number_of_batches_to_generate = 4 #@param {type:\"slider\", min:1, max:16, step:1}\n",
-        "allow_model_to_stop_generation_if_needed = False #@param {type:\"boolean\"}\n",
         "temperature = 0.9 #@param {type:\"slider\", min:0.1, max:1, step:0.1}\n",
+        "allow_model_to_stop_generation_if_needed = False #@param {type:\"boolean\"}\n",
         "\n",
         "print('=' * 70)\n",
         "print('Los Angeles Music Composer TTM Model Generator')\n",
@@ -330,7 +338,15 @@
         "for A in AUX_DATA:\n",
         "  titles_index.append(A[0])\n",
         "\n",
-        "search_match = process.extract(query=enter_desired_song_title, choices=titles_index, limit=1)\n",
+        "search_string = ''\n",
+        "\n",
+        "if enter_desired_song_title != '' and enter_desired_artist != '':\n",
+        "  search_string = enter_desired_song_title + ' --- ' + enter_desired_artist\n",
+        "\n",
+        "else:\n",
+        "  search_string = enter_desired_song_title + enter_desired_artist\n",
+        "\n",
+        "search_match = process.extract(query=search_string, choices=titles_index, limit=1)\n",
         "search_index = titles_index.index(search_match[0][0])\n",
         "\n",
         "print('Done!')\n",
@@ -345,11 +361,11 @@
         "\n",
         "outy = AUX_DATA[search_index][1]\n",
         "\n",
+        "block_marker = sum([(y * 10) for y in outy if y < 128]) / 1000\n",
+        "\n",
         "inp = [outy] * number_of_batches_to_generate\n",
         "\n",
         "inp = torch.LongTensor(inp).cuda()\n",
-        "\n",
-        "#start_time = time()\n",
         "\n",
         "out = model.module.generate(inp, \n",
         "                      number_of_tokens_to_generate, \n",
@@ -362,11 +378,8 @@
         "print('=' * 70)\n",
         "print('Done!')\n",
         "print('=' * 70)\n",
-        "#print('Generation took', time() - start_time, \"seconds\")\n",
-        "#print('=' * 70)\n",
         "#======================================================================\n",
         "print('Rendering results...')\n",
-        "print('=' * 70)\n",
         "\n",
         "for i in range(number_of_batches_to_generate):\n",
         "\n",
@@ -444,6 +457,9 @@
         "      ax.set_facecolor('black')\n",
         "\n",
         "      plt.scatter(x,y, c=c)\n",
+        "\n",
+        "      ax.axvline(x=block_marker, c='w')\n",
+        "\n",
         "      plt.xlabel(\"Time\")\n",
         "      plt.ylabel(\"Pitch\")\n",
         "      plt.show() "
