--- a/Los_Angeles_Music_Composer.ipynb
+++ b/Los_Angeles_Music_Composer.ipynb
@@ -66,7 +66,7 @@
       "outputs": [],
       "source": [
         "#@title Install dependencies\n",
-        "!git clone https://github.com/asigalov61/Los-Angeles-Music-Composer\n",
+        "!git clone --depth 1 https://github.com/asigalov61/Los-Angeles-Music-Composer\n",
         "!pip install torch\n",
         "!pip install einops\n",
         "!pip install torch-summary\n",
@@ -375,11 +375,11 @@
         "\n",
         "#start_time = time()\n",
         "\n",
-        "out = model.module.generate(inp, \n",
-        "                      number_of_tokens_tp_generate, \n",
-        "                      temperature=temperature, \n",
-        "                      return_prime=True, \n",
-        "                      min_stop_token=0, \n",
+        "out = model.module.generate(inp,\n",
+        "                      number_of_tokens_tp_generate,\n",
+        "                      temperature=temperature,\n",
+        "                      return_prime=True,\n",
+        "                      min_stop_token=0,\n",
         "                      verbose=True)\n",
         "\n",
         "out0 = out.tolist()\n",
@@ -407,7 +407,7 @@
         "  print('=' * 70)\n",
         "\n",
         "  if len(out) != 0:\n",
-        "    \n",
+        "\n",
         "      song = out1\n",
         "      song_f = []\n",
         "      tim = 0\n",
@@ -427,22 +427,22 @@
         "            song1.append(son)\n",
         "          son = []\n",
         "          son.append(s)\n",
-        "                      \n",
+        "\n",
         "      for ss in song1:\n",
         "\n",
         "        tim += ss[0] * 10\n",
         "\n",
         "        dur = (((ss[1]-128) // 8)+1) * 20\n",
         "        vel = (((ss[1]-128) % 8)+1) * 15\n",
-        "    \n",
+        "\n",
         "        channel = (ss[2]-1152) // 128\n",
         "        pitch = (ss[2]-1152) % 128\n",
-        "                        \n",
+        "\n",
         "        song_f.append(['note', tim, dur, channel, pitch, vel ])\n",
         "\n",
         "      detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
-        "                                                          output_signature = 'Los Angeles Music Composer',  \n",
-        "                                                          output_file_name = '/content/Los-Angeles-Music-Composer-Music-Composition_'+str(i), \n",
+        "                                                          output_signature = 'Los Angeles Music Composer',\n",
+        "                                                          output_file_name = '/content/Los-Angeles-Music-Composer-Music-Composition_'+str(i),\n",
         "                                                          track_name='Project Los Angeles',\n",
         "                                                          list_of_MIDI_patches=[0, 24, 32, 40, 42, 46, 56, 71, 73, 0, 53, 19, 0, 0, 0, 0],\n",
         "                                                          number_of_ticks_per_quarter=500)\n",
@@ -475,7 +475,7 @@
         "      plt.scatter(x,y, c=c)\n",
         "      plt.xlabel(\"Time\")\n",
         "      plt.ylabel(\"Pitch\")\n",
-        "      plt.show() "
+        "      plt.show()"
       ],
       "metadata": {
         "cellView": "form",
@@ -538,7 +538,7 @@
         "patches = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
         "\n",
         "patch_map = [\n",
-        "            [0, 1, 2, 3, 4, 5, 6, 7], # Piano \n",
+        "            [0, 1, 2, 3, 4, 5, 6, 7], # Piano\n",
         "            [24, 25, 26, 27, 28, 29, 30], # Guitar\n",
         "            [32, 33, 34, 35, 36, 37, 38, 39], # Bass\n",
         "            [40, 41], # Violin\n",
@@ -553,7 +553,7 @@
         "            ]\n",
         "\n",
         "while itrack < len(score):\n",
-        "  for event in score[itrack]:         \n",
+        "  for event in score[itrack]:\n",
         "      if event[0] == 'note' or event[0] == 'patch_change':\n",
         "          events_matrix.append(event)\n",
         "  itrack += 1\n",
@@ -610,7 +610,7 @@
         "    if e[1] >= 0 and e[2] > 0:\n",
         "\n",
         "      # Cliping all values...\n",
-        "      tim = max(0, min(127, e[1]-pe[1]))             \n",
+        "      tim = max(0, min(127, e[1]-pe[1]))\n",
         "      dur = max(1, min(127, e[2]))\n",
         "      cha = max(0, min(11, e[3]))\n",
         "      ptc = max(1, min(127, e[4]))\n",
@@ -618,7 +618,7 @@
         "\n",
         "      velocity = round(vel / 15)\n",
         "\n",
-        "      # Writing final note \n",
+        "      # Writing final note\n",
         "      melody_chords.append([tim, dur, cha, ptc, velocity])\n",
         "\n",
         "      pe = e\n",
@@ -669,7 +669,7 @@
         "  melody_chords_f1.append([m[0], dur_vel+128, cha_ptc+1152])\n",
         "\n",
         "#=======================================================\n",
-        "  \n",
+        "\n",
         "song = melody_chords_f\n",
         "song_f = []\n",
         "tim = 0\n",
@@ -689,7 +689,7 @@
         "      song1.append(son)\n",
         "    son = []\n",
         "    son.append(s)\n",
-        "                \n",
+        "\n",
         "for ss in song1:\n",
         "\n",
         "  tim += ss[0] * 10\n",
@@ -699,16 +699,16 @@
         "\n",
         "  channel = (ss[2]-1152) // 128\n",
         "  pitch = (ss[2]-1152) % 128\n",
-        "                  \n",
+        "\n",
         "  song_f.append(['note', tim, dur, channel, pitch, vel ])\n",
         "\n",
         "detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
-        "                                                      output_signature = 'Los Angeles Music Composer',  \n",
+        "                                                      output_signature = 'Los Angeles Music Composer',\n",
         "                                                      output_file_name = '/content/Los-Angeles-Music-Composer-Seed-Composition',\n",
         "                                                      track_name='Project Los Angeles',\n",
         "                                                      list_of_MIDI_patches=[0, 24, 32, 40, 42, 46, 56, 71, 73, 0, 53, 19, 0, 0, 0, 0],\n",
         "                                                      number_of_ticks_per_quarter=500)\n",
-        "    \n",
+        "\n",
         "#=======================================================\n",
         "\n",
         "print('=' * 70)\n",
@@ -802,7 +802,7 @@
         "  if 0 not in test_info:\n",
         "    dur_vel = (desired_duration * 8) + (desired_velocity-1)\n",
         "    cha_ptc = (12 * 128) + desired_pitch\n",
-        "    \n",
+        "\n",
         "    outy.extend([desired_time, dur_vel+128, cha_ptc+1152])\n",
         "\n",
         "print('Selected Improv sequence:')\n",
@@ -815,11 +815,11 @@
         "\n",
         "#start_time = time()\n",
         "\n",
-        "out = model.module.generate(inp, \n",
-        "                      number_of_tokens_tp_generate, \n",
-        "                      temperature=temperature, \n",
-        "                      return_prime=True, \n",
-        "                      min_stop_token=min_stop_token, \n",
+        "out = model.module.generate(inp,\n",
+        "                      number_of_tokens_tp_generate,\n",
+        "                      temperature=temperature,\n",
+        "                      return_prime=True,\n",
+        "                      min_stop_token=min_stop_token,\n",
         "                      verbose=True)\n",
         "\n",
         "out0 = out.tolist()\n",
@@ -847,7 +847,7 @@
         "  print('=' * 70)\n",
         "\n",
         "  if len(out) != 0:\n",
-        "    \n",
+        "\n",
         "      song = out1\n",
         "      song_f = []\n",
         "      tim = 0\n",
@@ -867,22 +867,22 @@
         "            song1.append(son)\n",
         "          son = []\n",
         "          son.append(s)\n",
-        "                      \n",
+        "\n",
         "      for ss in song1:\n",
         "\n",
         "        tim += ss[0] * 10\n",
         "\n",
         "        dur = (((ss[1]-128) // 8)+1) * 20\n",
         "        vel = (((ss[1]-128) % 8)+1) * 15\n",
-        "    \n",
+        "\n",
         "        channel = (ss[2]-1152) // 128\n",
         "        pitch = (ss[2]-1152) % 128\n",
-        "                        \n",
+        "\n",
         "        song_f.append(['note', tim, dur, channel, pitch, vel ])\n",
         "\n",
         "      detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
-        "                                                          output_signature = 'Los Angeles Music Composer',  \n",
-        "                                                          output_file_name = '/content/Los-Angeles-Music-Composer-Music-Composition_'+str(i), \n",
+        "                                                          output_signature = 'Los Angeles Music Composer',\n",
+        "                                                          output_file_name = '/content/Los-Angeles-Music-Composer-Music-Composition_'+str(i),\n",
         "                                                          track_name='Project Los Angeles',\n",
         "                                                          list_of_MIDI_patches=[0, 24, 32, 40, 42, 46, 56, 71, 73, 0, 53, 19, 0, 0, 0, 0],\n",
         "                                                          number_of_ticks_per_quarter=500)\n",
@@ -915,7 +915,7 @@
         "      plt.scatter(x,y, c=c)\n",
         "      plt.xlabel(\"Time\")\n",
         "      plt.ylabel(\"Pitch\")\n",
-        "      plt.show() "
+        "      plt.show()"
       ],
       "metadata": {
         "cellView": "form",
@@ -959,11 +959,11 @@
         "\n",
         "#start_time = time()\n",
         "\n",
-        "out = model.module.generate(inp, \n",
-        "                      number_of_tokens_to_generate, \n",
-        "                      temperature=temperature, \n",
-        "                      return_prime=include_prime_tokens_in_generated_output, \n",
-        "                      min_stop_token=min_stop_token, \n",
+        "out = model.module.generate(inp,\n",
+        "                      number_of_tokens_to_generate,\n",
+        "                      temperature=temperature,\n",
+        "                      return_prime=include_prime_tokens_in_generated_output,\n",
+        "                      min_stop_token=min_stop_token,\n",
         "                      verbose=True)\n",
         "\n",
         "out0 = out.tolist()\n",
@@ -988,7 +988,7 @@
         "  print('=' * 70)\n",
         "\n",
         "  if len(out) != 0:\n",
-        "      \n",
+        "\n",
         "      song = out1\n",
         "      song_f = []\n",
         "      tim = 0\n",
@@ -1008,22 +1008,22 @@
         "            song1.append(son)\n",
         "          son = []\n",
         "          son.append(s)\n",
-        "                      \n",
+        "\n",
         "      for ss in song1:\n",
         "\n",
         "        tim += ss[0] * 10\n",
         "\n",
         "        dur = ((ss[1]-128) // 8) * 20\n",
         "        vel = (((ss[1]-128) % 8)+1) * 15\n",
-        "    \n",
+        "\n",
         "        channel = (ss[2]-1152) // 128\n",
         "        pitch = (ss[2]-1152) % 128\n",
-        "                        \n",
+        "\n",
         "        song_f.append(['note', tim, dur, channel, pitch, vel ])\n",
         "\n",
         "      detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
-        "                                                          output_signature = 'Los Angeles Music Composer',  \n",
-        "                                                          output_file_name = '/content/Los-Angeles-Music-Composer-Music-Composition_'+str(i), \n",
+        "                                                          output_signature = 'Los Angeles Music Composer',\n",
+        "                                                          output_file_name = '/content/Los-Angeles-Music-Composer-Music-Composition_'+str(i),\n",
         "                                                          track_name='Project Los Angeles',\n",
         "                                                          list_of_MIDI_patches=[0, 24, 32, 40, 42, 46, 56, 71, 73, 0, 53, 19, 0, 0, 0, 0],\n",
         "                                                          number_of_ticks_per_quarter=500)\n",
@@ -1054,7 +1054,7 @@
         "      plt.scatter(x,y, c=c)\n",
         "      plt.xlabel(\"Time\")\n",
         "      plt.ylabel(\"Pitch\")\n",
-        "      plt.show() "
+        "      plt.show()"
       ]
     },
     {
@@ -1088,12 +1088,12 @@
         "\n",
         "  inp = torch.LongTensor(out2).cuda()\n",
         "\n",
-        "  out1 = model.module.generate(inp[None, ...], \n",
-        "                        1, \n",
-        "                        temperature=temperature, \n",
-        "                        return_prime=False, \n",
+        "  out1 = model.module.generate(inp[None, ...],\n",
+        "                        1,\n",
+        "                        temperature=temperature,\n",
+        "                        return_prime=False,\n",
         "                        verbose=False)\n",
-        "  \n",
+        "\n",
         "  out2.extend(out1[0].tolist())\n",
         "\n",
         "print('=' * 70)\n",
@@ -1106,7 +1106,7 @@
         "print('=' * 70)\n",
         "\n",
         "if len(out2) != 0:\n",
-        "    \n",
+        "\n",
         "    song = out2\n",
         "    song_f = []\n",
         "    time = 0\n",
@@ -1126,22 +1126,22 @@
         "          song1.append(son)\n",
         "        son = []\n",
         "        son.append(s)\n",
-        "                    \n",
+        "\n",
         "    for ss in song1:\n",
         "\n",
         "      time += ss[0] * 10\n",
         "\n",
         "      dur = ((ss[1]-128) // 8) * 20\n",
         "      vel = (((ss[1]-128) % 8)+1) * 15\n",
-        "   \n",
+        "\n",
         "      channel = (ss[2]-1152) // 128\n",
         "      pitch = (ss[2]-1152) % 128\n",
-        "                      \n",
+        "\n",
         "      song_f.append(['note', time, dur, channel, pitch, vel ])\n",
         "\n",
         "    detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
-        "                                                        output_signature = 'Los Angeles Music Composer',  \n",
-        "                                                        output_file_name = '/content/Los-Angeles-Music-Composer-Music-Composition', \n",
+        "                                                        output_signature = 'Los Angeles Music Composer',\n",
+        "                                                        output_file_name = '/content/Los-Angeles-Music-Composer-Music-Composition',\n",
         "                                                        track_name='Project Los Angeles',\n",
         "                                                        list_of_MIDI_patches=[0, 24, 32, 40, 42, 46, 56, 71, 73, 0, 53, 19, 0, 0, 0, 0],\n",
         "                                                        number_of_ticks_per_quarter=500)\n",
@@ -1174,7 +1174,7 @@
         "    plt.scatter(x,y, c=c)\n",
         "    plt.xlabel(\"Time\")\n",
         "    plt.ylabel(\"Pitch\")\n",
-        "    plt.show() "
+        "    plt.show()"
       ],
       "metadata": {
         "cellView": "form",
@@ -1228,7 +1228,7 @@
         "\n",
         "      velocity = round(vel / 15)\n",
         "\n",
-        "      \n",
+        "\n",
         "      # WRITING EACH NOTE HERE\n",
         "      dur_vel = (dur * 8) + (velocity-1)\n",
         "      cha_ptc = (melody_instrument_number * 128) + ptc\n",
@@ -1273,13 +1273,13 @@
         "  count = 0\n",
         "\n",
         "  while chord_time < next_note_time and count < number_of_generation_attempts_per_melody_note:\n",
-        "   \n",
-        "    out1 = model.module.generate(inp[None, ...], \n",
-        "                          3, \n",
-        "                          temperature=temperature, \n",
-        "                          return_prime=False, \n",
+        "\n",
+        "    out1 = model.module.generate(inp[None, ...],\n",
+        "                          3,\n",
+        "                          temperature=temperature,\n",
+        "                          return_prime=False,\n",
         "                          verbose=False)\n",
-        "    \n",
+        "\n",
         "    inp = torch.cat((inp, out1[0]))\n",
         "\n",
         "    pct = chord_time\n",
@@ -1287,7 +1287,7 @@
         "    count += 1\n",
         "\n",
         "    if out1[0][0] < 128:\n",
-        "      \n",
+        "\n",
         "      chord_time += out1[0][0].item()\n",
         "\n",
         "  inp = inp[:-3].tolist()\n",
@@ -1309,7 +1309,7 @@
         "print('=' * 70)\n",
         "\n",
         "if len(out1) != 0:\n",
-        "    \n",
+        "\n",
         "    song = out1\n",
         "    song_f = []\n",
         "    time = 0\n",
@@ -1329,22 +1329,22 @@
         "          song1.append(son)\n",
         "        son = []\n",
         "        son.append(s)\n",
-        "                    \n",
+        "\n",
         "    for ss in song1:\n",
         "\n",
         "      time += ss[0] * 10\n",
         "\n",
         "      dur = ((ss[1]-128) // 8) * 20\n",
         "      vel = (((ss[1]-128) % 8)+1) * 15\n",
-        "   \n",
+        "\n",
         "      channel = (ss[2]-1152) // 128\n",
         "      pitch = (ss[2]-1152) % 128\n",
-        "                      \n",
+        "\n",
         "      song_f.append(['note', time, dur, channel, pitch, vel ])\n",
         "\n",
         "    detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
-        "                                                        output_signature = 'Los Angeles Music Composer',  \n",
-        "                                                        output_file_name = '/content/Los-Angeles-Music-Composer-Music-Composition', \n",
+        "                                                        output_signature = 'Los Angeles Music Composer',\n",
+        "                                                        output_file_name = '/content/Los-Angeles-Music-Composer-Music-Composition',\n",
         "                                                        track_name='Project Los Angeles',\n",
         "                                                        list_of_MIDI_patches=[0, 24, 32, 40, 42, 46, 56, 71, 73, 0, 53, 19, 0, 0, 0, 0],\n",
         "                                                        number_of_ticks_per_quarter=500)\n",
@@ -1377,7 +1377,7 @@
         "    plt.scatter(x,y, c=c)\n",
         "    plt.xlabel(\"Time\")\n",
         "    plt.ylabel(\"Pitch\")\n",
-        "    plt.show() "
+        "    plt.show()"
       ],
       "metadata": {
         "cellView": "form",
@@ -1400,7 +1400,8 @@
     "accelerator": "GPU",
     "colab": {
       "private_outputs": true,
-      "provenance": []
+      "provenance": [],
+      "gpuClass": "premium"
     },
     "gpuClass": "premium",
     "kernelspec": {
