--- a/Los_Angeles_Music_Composer_Edition.ipynb
+++ b/Los_Angeles_Music_Composer_Edition.ipynb
@@ -66,7 +66,7 @@
       "outputs": [],
       "source": [
         "#@title Install dependencies\n",
-        "!git clone https://github.com/asigalov61/Los-Angeles-Music-Composer\n",
+        "!git clone --depth 1 https://github.com/asigalov61/Los-Angeles-Music-Composer\n",
         "!pip install torch\n",
         "!pip install einops\n",
         "!pip install torch-summary\n",
@@ -281,7 +281,7 @@
         "patches = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
         "\n",
         "patch_map = [\n",
-        "            [0, 1, 2, 3, 4, 5, 6, 7], # Piano \n",
+        "            [0, 1, 2, 3, 4, 5, 6, 7], # Piano\n",
         "            [24, 25, 26, 27, 28, 29, 30], # Guitar\n",
         "            [32, 33, 34, 35, 36, 37, 38, 39], # Bass\n",
         "            [40, 41], # Violin\n",
@@ -296,7 +296,7 @@
         "            ]\n",
         "\n",
         "while itrack < len(score):\n",
-        "  for event in score[itrack]:         \n",
+        "  for event in score[itrack]:\n",
         "      if event[0] == 'note' or event[0] == 'patch_change':\n",
         "          events_matrix.append(event)\n",
         "  itrack += 1\n",
@@ -354,7 +354,7 @@
         "    if e[1] >= 0 and e[2] > 0:\n",
         "\n",
         "      # Cliping all values...\n",
-        "      tim = max(0, min(127, e[1]-pe[1]))             \n",
+        "      tim = max(0, min(127, e[1]-pe[1]))\n",
         "      dur = max(1, min(127, e[2]))\n",
         "      cha = max(0, min(11, e[3]))\n",
         "      ptc = max(1, min(127, e[4]))\n",
@@ -362,7 +362,7 @@
         "\n",
         "      velocity = round(vel / 15)\n",
         "\n",
-        "      # Writing final note \n",
+        "      # Writing final note\n",
         "      melody_chords.append([tim, dur, cha, ptc, velocity])\n",
         "\n",
         "      pe = e\n",
@@ -418,7 +418,7 @@
         "melody_chords_f = melody_chords_f[:number_of_prime_tokens]\n",
         "\n",
         "#=======================================================\n",
-        "  \n",
+        "\n",
         "song = melody_chords_f\n",
         "song_f = []\n",
         "tim = 0\n",
@@ -438,7 +438,7 @@
         "      song1.append(son)\n",
         "    son = []\n",
         "    son.append(s)\n",
-        "                \n",
+        "\n",
         "for ss in song1:\n",
         "\n",
         "  tim += ss[0] * 10\n",
@@ -448,16 +448,16 @@
         "\n",
         "  channel = (ss[2]-1152) // 128\n",
         "  pitch = (ss[2]-1152) % 128\n",
-        "                  \n",
+        "\n",
         "  song_f.append(['note', tim, dur, channel, pitch, vel ])\n",
         "\n",
         "detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
-        "                                                      output_signature = 'Los Angeles Music Composer',  \n",
+        "                                                      output_signature = 'Los Angeles Music Composer',\n",
         "                                                      output_file_name = '/content/Los-Angeles-Music-Composer-Seed-Composition',\n",
         "                                                      track_name='Project Los Angeles',\n",
         "                                                      list_of_MIDI_patches=[0, 24, 32, 40, 42, 46, 56, 71, 73, 0, 53, 19, 0, 0, 0, 0],\n",
         "                                                      number_of_ticks_per_quarter=500)\n",
-        "    \n",
+        "\n",
         "#=======================================================\n",
         "\n",
         "print('=' * 70)\n",
@@ -541,10 +541,10 @@
         "\n",
         "start_time = time()\n",
         "\n",
-        "out = model.module.generate(inp, \n",
-        "                            402, \n",
-        "                            temperature=temperature, \n",
-        "                            return_prime=False,  \n",
+        "out = model.module.generate(inp,\n",
+        "                            402,\n",
+        "                            temperature=temperature,\n",
+        "                            return_prime=False,\n",
         "                            verbose=True)\n",
         "\n",
         "out0 = out.tolist()\n",
@@ -571,7 +571,7 @@
         "  print('=' * 70)\n",
         "\n",
         "  if len(out) != 0:\n",
-        "      \n",
+        "\n",
         "      song = preview + out1\n",
         "      song_f = []\n",
         "      tim = 0\n",
@@ -591,22 +591,22 @@
         "            song1.append(son)\n",
         "          son = []\n",
         "          son.append(s)\n",
-        "                      \n",
+        "\n",
         "      for ss in song1:\n",
         "\n",
         "        tim += ss[0] * 10\n",
         "\n",
         "        dur = ((ss[1]-128) // 8) * 20\n",
         "        vel = (((ss[1]-128) % 8)+1) * 15\n",
-        "    \n",
+        "\n",
         "        channel = (ss[2]-1152) // 128\n",
         "        pitch = (ss[2]-1152) % 128\n",
-        "                        \n",
+        "\n",
         "        song_f.append(['note', tim, dur, channel, pitch, vel ])\n",
         "\n",
         "      detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
-        "                                                          output_signature = 'Los Angeles Music Composer',  \n",
-        "                                                          output_file_name = '/content/Los-Angeles-Music-Composer-Music-Composition_'+str(i), \n",
+        "                                                          output_signature = 'Los Angeles Music Composer',\n",
+        "                                                          output_file_name = '/content/Los-Angeles-Music-Composer-Music-Composition_'+str(i),\n",
         "                                                          track_name='Project Los Angeles',\n",
         "                                                          list_of_MIDI_patches=[0, 24, 32, 40, 42, 46, 56, 71, 73, 0, 53, 19, 0, 0, 0, 0],\n",
         "                                                          number_of_ticks_per_quarter=500)\n",
@@ -642,7 +642,7 @@
         "\n",
         "      plt.xlabel(\"Time\")\n",
         "      plt.ylabel(\"Pitch\")\n",
-        "      plt.show() "
+        "      plt.show()"
       ]
     },
     {
@@ -658,8 +658,11 @@
         "  melody_chords_f.extend(out0[min(len(out0)-1, add_block_with_batch_number)])\n",
         "  print('Block added!')\n",
         "else:\n",
-        "  melody_chords_f = melody_chords_f[:max(number_of_prime_tokens, (len(melody_chords_f)-402))]\n",
-        "  print('Block removed!')\n",
+        "  if len(melody_chords_f) > 402:\n",
+        "    melody_chords_f = melody_chords_f[:max(number_of_prime_tokens, (len(melody_chords_f)-402))]\n",
+        "    print('Block removed!')\n",
+        "  else:\n",
+        "    print('Nothing to remove!!!')\n",
         "\n",
         "print('=' * 70)\n",
         "print('Composition now has', (len(melody_chords_f) // 4), 'notes')\n",
@@ -671,7 +674,7 @@
         "print('=' * 70)\n",
         "\n",
         "if len(melody_chords_f) != 0:\n",
-        "    \n",
+        "\n",
         "    song = melody_chords_f\n",
         "    song_f = []\n",
         "    tim = 0\n",
@@ -691,22 +694,22 @@
         "          song1.append(son)\n",
         "        son = []\n",
         "        son.append(s)\n",
-        "                    \n",
+        "\n",
         "    for ss in song1:\n",
         "\n",
         "      tim += ss[0] * 10\n",
         "\n",
         "      dur = ((ss[1]-128) // 8) * 20\n",
         "      vel = (((ss[1]-128) % 8)+1) * 15\n",
-        "  \n",
+        "\n",
         "      channel = (ss[2]-1152) // 128\n",
         "      pitch = (ss[2]-1152) % 128\n",
-        "                      \n",
+        "\n",
         "      song_f.append(['note', tim, dur, channel, pitch, vel ])\n",
         "\n",
         "    detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
-        "                                                        output_signature = 'Los Angeles Music Composer',  \n",
-        "                                                        output_file_name = '/content/Los-Angeles-Music-Composer-Music-Composition', \n",
+        "                                                        output_signature = 'Los Angeles Music Composer',\n",
+        "                                                        output_file_name = '/content/Los-Angeles-Music-Composer-Music-Composition',\n",
         "                                                        track_name='Project Los Angeles',\n",
         "                                                        list_of_MIDI_patches=[0, 24, 32, 40, 42, 46, 56, 71, 73, 0, 53, 19, 0, 0, 0, 0],\n",
         "                                                        number_of_ticks_per_quarter=500)\n",
@@ -721,7 +724,7 @@
         "    c = []\n",
         "\n",
         "    colors = ['red', 'yellow', 'green', 'cyan', 'blue', 'pink', 'orange', 'purple', 'gray', 'white', 'gold', 'silver']\n",
-        "    \n",
+        "\n",
         "    if block_action == 'add_last_generated_block':\n",
         "      block_lines.append((song_f[-1][1] / 1000))\n",
         "    else:\n",
@@ -748,7 +751,7 @@
         "\n",
         "    plt.xlabel(\"Time\")\n",
         "    plt.ylabel(\"Pitch\")\n",
-        "    plt.show() "
+        "    plt.show()"
       ],
       "metadata": {
         "cellView": "form",
@@ -771,7 +774,8 @@
     "accelerator": "GPU",
     "colab": {
       "private_outputs": true,
-      "provenance": []
+      "provenance": [],
+      "gpuClass": "premium"
     },
     "gpuClass": "premium",
     "kernelspec": {
