--- a/Los_Angeles_Music_Composer_TTM_Edition.ipynb
+++ b/Los_Angeles_Music_Composer_TTM_Edition.ipynb
@@ -66,7 +66,7 @@
       "outputs": [],
       "source": [
         "#@title Install dependencies\n",
-        "!git clone https://github.com/asigalov61/Los-Angeles-Music-Composer\n",
+        "!git clone --depth 1 https://github.com/asigalov61/Los-Angeles-Music-Composer\n",
         "!pip install torch\n",
         "!pip install einops\n",
         "!pip install fuzzywuzzy[speedup]\n",
@@ -367,11 +367,11 @@
         "\n",
         "inp = torch.LongTensor(inp).cuda()\n",
         "\n",
-        "out = model.module.generate(inp, \n",
-        "                      number_of_tokens_to_generate, \n",
-        "                      temperature=temperature, \n",
-        "                      return_prime=True, \n",
-        "                      min_stop_token=min_stop_token, \n",
+        "out = model.module.generate(inp,\n",
+        "                      number_of_tokens_to_generate,\n",
+        "                      temperature=temperature,\n",
+        "                      return_prime=True,\n",
+        "                      min_stop_token=min_stop_token,\n",
         "                      verbose=True)\n",
         "\n",
         "out0 = out.tolist()\n",
@@ -393,7 +393,7 @@
         "  print('=' * 70)\n",
         "\n",
         "  if len(out) != 0:\n",
-        "      \n",
+        "\n",
         "      song = out1\n",
         "      song_f = []\n",
         "      tim = 0\n",
@@ -413,22 +413,22 @@
         "            song1.append(son)\n",
         "          son = []\n",
         "          son.append(s)\n",
-        "                      \n",
+        "\n",
         "      for ss in song1:\n",
         "\n",
         "        tim += ss[0] * 10\n",
         "\n",
         "        dur = ((ss[1]-128) // 8) * 20\n",
         "        vel = (((ss[1]-128) % 8)+1) * 15\n",
-        "    \n",
+        "\n",
         "        channel = (ss[2]-1152) // 128\n",
         "        pitch = (ss[2]-1152) % 128\n",
-        "                        \n",
+        "\n",
         "        song_f.append(['note', tim, dur, channel, pitch, vel ])\n",
         "\n",
         "      detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
-        "                                                          output_signature = 'Los Angeles Music Composer',  \n",
-        "                                                          output_file_name = '/content/Los-Angeles-Music-Composer-Music-Composition_'+str(i), \n",
+        "                                                          output_signature = 'Los Angeles Music Composer',\n",
+        "                                                          output_file_name = '/content/Los-Angeles-Music-Composer-Music-Composition_'+str(i),\n",
         "                                                          track_name='Project Los Angeles',\n",
         "                                                          list_of_MIDI_patches=[0, 24, 32, 40, 42, 46, 56, 71, 73, 0, 53, 19, 0, 0, 0, 0],\n",
         "                                                          number_of_ticks_per_quarter=500)\n",
@@ -462,7 +462,7 @@
         "\n",
         "      plt.xlabel(\"Time\")\n",
         "      plt.ylabel(\"Pitch\")\n",
-        "      plt.show() "
+        "      plt.show()"
       ]
     },
     {
@@ -479,7 +479,8 @@
     "accelerator": "GPU",
     "colab": {
       "private_outputs": true,
-      "provenance": []
+      "provenance": [],
+      "gpuClass": "premium"
     },
     "gpuClass": "premium",
     "kernelspec": {
