--- a/Los_Angeles_Music_Composer.ipynb
+++ b/Los_Angeles_Music_Composer.ipynb
@@ -1199,8 +1199,8 @@
         "\n",
         "melody_instrument = \"Flute\" #@param [\"Piano\", \"Guitar\", \"Bass\", \"Violin\", \"Cello\", \"Harp\", \"Trumpet\", \"Clarinet\", \"Flute\", \"Choir\", \"Organ\"]\n",
         "melody_length_in_notes = 48 #@param {type:\"slider\", min:16, max:512, step:16}\n",
-        "number_of_prime_notes = 0 #@param {type:\"slider\", min:0, max:32, step:1}\n",
-        "number_of_generation_attempts_per_melody_note = 16 #@param {type:\"slider\", min:1, max:64, step:1}\n",
+        "number_of_prime_notes = 1 #@param {type:\"slider\", min:1, max:32, step:1}\n",
+        "number_of_generation_attempts_per_melody_note = 1 #@param {type:\"slider\", min:1, max:16, step:1}\n",
         "temperature = 1 #@param {type:\"slider\", min:0.1, max:1, step:0.1}\n",
         "\n",
         "print('=' * 70)\n",
@@ -1210,7 +1210,7 @@
         "print('Extracting melody...')\n",
         "#=======================================================\n",
         "\n",
-        "instruments_list = [\"Piano\", \"Guitar\", \"Bass\", \"Violin\", \"Cello\", \"Harp\", \"Trumpet\", \"Clarinet\", \"Flute\", 'Drums', \"Choir\", \"Organ\"]\n",
+        "instruments_list = [\"Piano\", \"Guitar\", \"Bass\", \"Violin\", \"Cello\", \"Harp\", \"Trumpet\", \"Sax\", \"Flute\", 'Drums', \"Choir\", \"Organ\"]\n",
         "melody_instrument_number = instruments_list.index(melody_instrument)\n",
         "\n",
         "melody = []\n",
@@ -1220,21 +1220,24 @@
         "    if e[3] != 9:\n",
         "\n",
         "      # Cliping all values...\n",
-        "      tim = max(0, min(127, e[1]-pe[1]))\n",
+        "      time = max(0, min(127, e[1]-pe[1]))\n",
         "      dur = max(1, min(127, e[2]))\n",
-        "      cha = max(0, min(11, e[3]))\n",
+        "      cha = melody_instrument_number\n",
         "      ptc = max(1, min(127, e[4]))\n",
-        "      vel = max(8, min(127, e[5]))\n",
+        "\n",
+        "      if ptc < 60:\n",
+        "        ptc_aug = (ptc % 12) + 60\n",
+        "      else:\n",
+        "        ptc_aug = ptc\n",
         "\n",
         "      velocity = round(vel / 15)\n",
         "\n",
-        "\n",
         "      # WRITING EACH NOTE HERE\n",
         "      dur_vel = (dur * 8) + (velocity-1)\n",
-        "      cha_ptc = (melody_instrument_number * 128) + ptc\n",
+        "      cha_ptc = (melody_instrument_number * 128) + ptc_aug\n",
         "\n",
-        "      if tim != 0:\n",
-        "        melody.append([tim, dur_vel+128, cha_ptc+1152])\n",
+        "      if time != 0:\n",
+        "        melody.append([time, dur_vel+128, cha_ptc+1152])\n",
         "\n",
         "      pe = e\n",
         "\n",
@@ -1244,7 +1247,7 @@
         "\n",
         "print('=' * 70)\n",
         "print('Melody has', len(melody), 'notes')\n",
-        "print('Melody has', len(melody)*4, 'tokens')\n",
+        "print('Melody has', len(melody)*3, 'tokens')\n",
         "\n",
         "print('=' * 70)\n",
         "print('Starting harmonization...')\n",
@@ -1255,8 +1258,8 @@
         "for m in melody[:number_of_prime_notes]:\n",
         "  inp.extend(m)\n",
         "\n",
-        "#start_time = time()\n",
         "chord_time = 0\n",
+        "pct = 0\n",
         "\n",
         "for i in tqdm.tqdm(range(number_of_prime_notes, len(melody[:melody_length_in_notes])-1)):\n",
         "\n",
@@ -1286,7 +1289,7 @@
         "\n",
         "    count += 1\n",
         "\n",
-        "    if out1[0][0] < 128:\n",
+        "    if out1[0][0] < 256:\n",
         "\n",
         "      chord_time += out1[0][0].item()\n",
         "\n",
@@ -1294,8 +1297,6 @@
         "\n",
         "print('=' * 70)\n",
         "print('Done!')\n",
-        "print('=' * 70)\n",
-        "#print('Generation took', time() - start_time, \"seconds\")\n",
         "print('=' * 70)\n",
         "\n",
         "#======================================================================\n",
