--- a/Los_Angeles_Music_Composer.ipynb
+++ b/Los_Angeles_Music_Composer.ipynb
@@ -1210,7 +1210,7 @@
         "print('Extracting melody...')\n",
         "#=======================================================\n",
         "\n",
-        "instruments_list = [\"Piano\", \"Guitar\", \"Bass\", \"Violin\", \"Cello\", \"Harp\", \"Trumpet\", \"Sax\", \"Flute\", 'Drums', \"Choir\", \"Organ\"]\n",
+        "instruments_list = [\"Piano\", \"Guitar\", \"Bass\", \"Violin\", \"Cello\", \"Harp\", \"Trumpet\", \"Clarinet\", \"Flute\", 'Drums', \"Choir\", \"Organ\"]\n",
         "melody_instrument_number = instruments_list.index(melody_instrument)\n",
         "\n",
         "melody = []\n",
@@ -1289,7 +1289,7 @@
         "\n",
         "    count += 1\n",
         "\n",
-        "    if out1[0][0] < 256:\n",
+        "    if out1[0][0] < 128:\n",
         "\n",
         "      chord_time += out1[0][0].item()\n",
         "\n",
